[gd_scene load_steps=53 format=2]

[ext_resource path="res://source/Player/scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://source/Player/player assets/kaol mesh/psx_kaol.tres" type="Material" id=2]
[ext_resource path="res://source/Player/player assets/kaol mesh/combined kaol.glb" type="PackedScene" id=3]
[ext_resource path="res://source/Player/player assets/weapon meshes/KaolSwords/psx_swords.tres" type="Material" id=4]
[ext_resource path="res://source/Player/scenes/HealthManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://source/User Interface/UserInterface.tscn" type="PackedScene" id=6]
[ext_resource path="res://source/Player/scenes/EnergyManager.tscn" type="PackedScene" id=7]
[ext_resource path="res://source/Player/player assets/weapon meshes/KaolSwords/KaolSwords.glb" type="PackedScene" id=8]
[ext_resource path="res://source/enemies/enemy stuff/effects/BloodParticles.tscn" type="PackedScene" id=9]
[ext_resource path="res://source/enemies/magician/magician/FireballSpawner.tscn" type="PackedScene" id=10]
[ext_resource path="res://source/User Interface/InventoryControl.tscn" type="PackedScene" id=11]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5.45672, 5.50304, 5.67122 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 4.12602, 8.30751, 4.0377 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 8.53026, 10.1259, 5.96718 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 5.19076, 14.043, 4.56303 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 7.15378, 6.09744, 5.45562 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.259041, 1.56549, 0.153055 )

[sub_resource type="CapsuleShape" id=7]
radius = 0.5
height = 2.0

[sub_resource type="AnimationNodeAdd2" id=8]
filter_enabled = true
filters = [ "kaol bones/Skeleton:mixamorig_RightArm", "kaol bones/Skeleton:mixamorig_RightForeArm", "kaol bones/Skeleton:mixamorig_RightHand", "kaol bones/Skeleton:mixamorig_RightShoulder" ]

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "walking"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "disarm over shoulder"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "disarm over shoulder mirror"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "disarm underarm"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "disarm underarm mirror"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "sitting idle"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "drink"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "falling idle"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "hard landing"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "combo attack no 2"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "attack combo no 3"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "running jump"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "rolling forward"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "heavy punch right"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "gunplay"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "heavy punch left"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "sword on shoulder R"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "combo attack no 1"

[sub_resource type="AnimationNodeTransition" id=27]
input_count = 7
input_0/name = "drink"
input_0/auto_advance = false
input_1/name = "disarm_shoulder"
input_1/auto_advance = false
input_2/name = "disarm_shoulder_mirror"
input_2/auto_advance = false
input_3/name = "disarm_underarm"
input_3/auto_advance = false
input_4/name = "disarm_underarm_mirror"
input_4/auto_advance = false
input_5/name = "walking"
input_5/auto_advance = false
input_6/name = "sword on shoulder R"
input_6/auto_advance = false

[sub_resource type="AnimationNodeOneShot" id=28]
fadein_time = 0.45
fadeout_time = 0.45

[sub_resource type="AnimationNodeOneShot" id=29]
filter_enabled = true
filters = [ "kaol bones/Skeleton:mixamorig_Head", "kaol bones/Skeleton:mixamorig_HeadTop_End", "kaol bones/Skeleton:mixamorig_LeftArm", "kaol bones/Skeleton:mixamorig_LeftForeArm", "kaol bones/Skeleton:mixamorig_LeftHand", "kaol bones/Skeleton:mixamorig_LeftShoulder", "kaol bones/Skeleton:mixamorig_Neck", "kaol bones/Skeleton:mixamorig_Spine", "kaol bones/Skeleton:mixamorig_Spine1", "kaol bones/Skeleton:mixamorig_Spine2", "kaol bones/Skeleton:mixamorig_head", "kaol bones/Skeleton:mixamorig_head_top_end", "kaol bones/Skeleton:mixamorig_left_arm", "kaol bones/Skeleton:mixamorig_left_fore_arm", "kaol bones/Skeleton:mixamorig_left_hand", "kaol bones/Skeleton:mixamorig_left_shoulder", "kaol bones/Skeleton:mixamorig_neck", "kaol bones/Skeleton:mixamorig_spine_2" ]

[sub_resource type="AnimationNodeTransition" id=30]
input_count = 11
xfade_time = 0.2
input_0/name = "combo1_0"
input_0/auto_advance = false
input_1/name = "combo2_1"
input_1/auto_advance = false
input_2/name = "combo3_2"
input_2/auto_advance = false
input_3/name = "gunplay_3"
input_3/auto_advance = false
input_4/name = "heavy_punch_L_4"
input_4/auto_advance = false
input_5/name = "heavy_punch_R_5"
input_5/auto_advance = false
input_6/name = "running jump_6"
input_6/auto_advance = false
input_7/name = "hard landing_7"
input_7/auto_advance = false
input_8/name = "rolling forward_8"
input_8/auto_advance = false
input_9/name = "interact_9"
input_9/auto_advance = false
input_10/name = "sitting idle"
input_10/auto_advance = false

[sub_resource type="AnimationNodeTimeScale" id=31]

[sub_resource type="AnimationNodeTimeScale" id=32]

[sub_resource type="AnimationNodeTransition" id=33]
input_count = 2
input_0/name = "state 0"
input_0/auto_advance = false
input_1/name = "state 1"
input_1/auto_advance = false

[sub_resource type="AnimationNodeAnimation" id=34]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=35]
animation = "run "

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "walking"

[sub_resource type="AnimationNodeBlendSpace1D" id=37]
blend_point_0/node = SubResource( 34 )
blend_point_0/pos = 0.66
blend_point_1/node = SubResource( 35 )
blend_point_1/pos = 10.0
blend_point_2/node = SubResource( 36 )
blend_point_2/pos = 3.9
min_space = 0.0
max_space = 10.0

[sub_resource type="AnimationNodeTransition" id=38]
input_count = 2
xfade_time = 0.4
input_0/name = "state 0"
input_0/auto_advance = false
input_1/name = "state 1"
input_1/auto_advance = false

[sub_resource type="AnimationNodeBlendTree" id=39]
graph_offset = Vector2( -2370.23, -567.965 )
nodes/Add2/node = SubResource( 8 )
nodes/Add2/position = Vector2( -1700, -380 )
nodes/Animation/node = SubResource( 26 )
nodes/Animation/position = Vector2( -2258, 153 )
"nodes/Animation 10/node" = SubResource( 9 )
"nodes/Animation 10/position" = Vector2( -2120, 20 )
"nodes/Animation 11/node" = SubResource( 10 )
"nodes/Animation 11/position" = Vector2( -2680, -180 )
"nodes/Animation 12/node" = SubResource( 11 )
"nodes/Animation 12/position" = Vector2( -2480, -180 )
"nodes/Animation 13/node" = SubResource( 12 )
"nodes/Animation 13/position" = Vector2( -2680, -100 )
"nodes/Animation 14/node" = SubResource( 13 )
"nodes/Animation 14/position" = Vector2( -2500, -100 )
"nodes/Animation 15/node" = SubResource( 14 )
"nodes/Animation 15/position" = Vector2( -1800, 460 )
"nodes/Animation 16/node" = SubResource( 15 )
"nodes/Animation 16/position" = Vector2( -2460, -300 )
"nodes/Animation 17/node" = SubResource( 16 )
"nodes/Animation 17/position" = Vector2( -2100, -420 )
"nodes/Animation 18/node" = SubResource( 17 )
"nodes/Animation 18/position" = Vector2( -2100, 360 )
"nodes/Animation 2/node" = SubResource( 18 )
"nodes/Animation 2/position" = Vector2( -2070, 153 )
"nodes/Animation 3/node" = SubResource( 19 )
"nodes/Animation 3/position" = Vector2( -1890, 153 )
"nodes/Animation 4/node" = SubResource( 20 )
"nodes/Animation 4/position" = Vector2( -1940, 360 )
"nodes/Animation 5/node" = SubResource( 21 )
"nodes/Animation 5/position" = Vector2( -2099, 462 )
"nodes/Animation 6/node" = SubResource( 22 )
"nodes/Animation 6/position" = Vector2( -1953, 252 )
"nodes/Animation 7/node" = SubResource( 23 )
"nodes/Animation 7/position" = Vector2( -2250, 252 )
"nodes/Animation 8/node" = SubResource( 24 )
"nodes/Animation 8/position" = Vector2( -2124, 252 )
"nodes/Animation 9/node" = SubResource( 25 )
"nodes/Animation 9/position" = Vector2( -1980, 20 )
nodes/InteractStates/node = SubResource( 27 )
nodes/InteractStates/position = Vector2( -2140, -280 )
nodes/OneShotAll/node = SubResource( 28 )
nodes/OneShotAll/position = Vector2( -1340, -120 )
nodes/OneShotInteract/node = SubResource( 29 )
nodes/OneShotInteract/position = Vector2( -1540, -280 )
nodes/States/node = SubResource( 30 )
nodes/States/position = Vector2( -1647, 90 )
nodes/TimeScale/node = SubResource( 32 )
nodes/TimeScale/position = Vector2( -1929, 462 )
"nodes/TimeScale 2/node" = SubResource( 31 )
"nodes/TimeScale 2/position" = Vector2( -2300, -300 )
nodes/Transition/node = SubResource( 33 )
nodes/Transition/position = Vector2( -1860, -200 )
nodes/idle2walk/node = SubResource( 37 )
nodes/idle2walk/position = Vector2( -2100, -540 )
nodes/idleStates/node = SubResource( 38 )
nodes/idleStates/position = Vector2( -1900, -420 )
nodes/output/position = Vector2( -1180, -100 )
node_connections = [ "output", 0, "OneShotAll", "Add2", 0, "idleStates", "Add2", 1, "Transition", "idleStates", 0, "idle2walk", "idleStates", 1, "Animation 17", "TimeScale", 0, "Animation 5", "InteractStates", 0, "TimeScale 2", "InteractStates", 1, "Animation 11", "InteractStates", 2, "Animation 12", "InteractStates", 3, "Animation 13", "InteractStates", 4, "Animation 14", "OneShotAll", 0, "OneShotInteract", "OneShotAll", 1, "States", "OneShotInteract", 0, "Add2", "OneShotInteract", 1, "InteractStates", "States", 0, "Animation", "States", 1, "Animation 2", "States", 2, "Animation 3", "States", 3, "Animation 7", "States", 4, "Animation 8", "States", 5, "Animation 6", "States", 6, "Animation 4", "States", 7, "Animation 18", "States", 8, "TimeScale", "States", 10, "Animation 15", "TimeScale 2", 0, "Animation 16", "Transition", 0, "Animation 10", "Transition", 1, "Animation 9" ]

[sub_resource type="SphereShape" id=40]
radius = 8.08264

[sub_resource type="SphereShape" id=41]
radius = 24.2502

[node name="Player" type="KinematicBody" groups=[
"player",
]]
collision_layer = 2
collision_mask = 3
script = ExtResource( 1 )

[node name="Pivot" type="Position3D" parent="."]

[node name="FaceCam" type="Camera" parent="Pivot"]
transform = Transform( -1, -1.84627e-08, -8.5451e-08, 1.77636e-15, 0.977445, -0.211188, 8.74228e-08, -0.211188, -0.977445, 0, 1.86409, -1.50241 )

[node name="combined_kaol" parent="Pivot" groups=[
"player",
] instance=ExtResource( 3 )]
transform = Transform( -3, 0, -2.62268e-07, 0, 3, 0, 2.62268e-07, 0, -3, 0, 0, 0 )

[node name="kaolzaogoch" parent="Pivot/combined_kaol/kaol bones/Skeleton" index="0"]
material/0 = ExtResource( 2 )

[node name="head_bone" type="BoneAttachment" parent="Pivot/combined_kaol/kaol bones/Skeleton" index="1"]
transform = Transform( 0.999422, -0.0198882, 0.0275729, -0.0171781, 0.40447, 0.91439, -0.0293379, -0.914336, 0.403894, 1.15104, 9.01506, -69.7888 )
bone_name = "mixamorig_head"

[node name="Area" type="Area" parent="Pivot/combined_kaol/kaol bones/Skeleton/head_bone"]

[node name="CollisionShape" type="CollisionShape" parent="Pivot/combined_kaol/kaol bones/Skeleton/head_bone/Area"]
transform = Transform( 1, -4.65661e-09, 0, 0, 1, 0, 5.58794e-09, 0, 1, 0, 6.81694, 3.8147e-06 )
shape = SubResource( 1 )

[node name="l_arm_bone" type="BoneAttachment" parent="Pivot/combined_kaol/kaol bones/Skeleton" index="2"]
transform = Transform( 0.134147, 0.663727, -0.735847, -0.980268, -0.0199144, -0.196667, -0.145187, 0.74771, 0.647959, 10.9715, 4.85804, -68.7087 )
bone_name = "mixamorig_left_arm"

[node name="Area" type="Area" parent="Pivot/combined_kaol/kaol bones/Skeleton/l_arm_bone"]

[node name="CollisionShape" type="CollisionShape" parent="Pivot/combined_kaol/kaol bones/Skeleton/l_arm_bone/Area"]
transform = Transform( 1, -1.30385e-08, 8.9407e-08, 2.98023e-08, 1, -2.88012e-07, -1.49012e-08, 3.42261e-08, 0.999999, 3.33786e-06, 5.14943, -2.67029e-05 )
shape = SubResource( 2 )

[node name="r_arm_bone" type="BoneAttachment" parent="Pivot/combined_kaol/kaol bones/Skeleton" index="3"]
transform = Transform( -0.321876, -0.745393, 0.58377, 0.945381, -0.286564, 0.155357, 0.0514846, 0.601891, 0.796918, -9.25716, 3.05565, -68.7618 )
bone_name = "mixamorig_right_arm"

[node name="Area" type="Area" parent="Pivot/combined_kaol/kaol bones/Skeleton/r_arm_bone"]

[node name="CollisionShape" type="CollisionShape" parent="Pivot/combined_kaol/kaol bones/Skeleton/r_arm_bone/Area"]
transform = Transform( 1, -1.30385e-08, 8.9407e-08, 2.98023e-08, 1, -2.88012e-07, -1.49012e-08, 3.42261e-08, 0.999999, 3.33786e-06, 5.14943, -2.67029e-05 )
shape = SubResource( 2 )

[node name="spine_bone" type="BoneAttachment" parent="Pivot/combined_kaol/kaol bones/Skeleton" index="4"]
transform = Transform( 0.9974, 0.0450982, 0.0562008, -0.0654894, 0.241981, 0.968068, 0.0300586, -0.969232, 0.244305, 0.642679, 0.250388, -53.1032 )
bone_name = "mixamorig_spine"

[node name="Area" type="Area" parent="Pivot/combined_kaol/kaol bones/Skeleton/spine_bone"]

[node name="CollisionShape" type="CollisionShape" parent="Pivot/combined_kaol/kaol bones/Skeleton/spine_bone/Area"]
transform = Transform( 1, -3.72529e-09, 3.72529e-08, 0, 1, -1.78814e-07, 0, 8.9407e-08, 1, 4.76837e-07, 6.13984, 0.749527 )
shape = SubResource( 3 )

[node name="l_leg_bone" type="BoneAttachment" parent="Pivot/combined_kaol/kaol bones/Skeleton" index="5"]
transform = Transform( -0.661364, 0.615422, 0.428587, 0.742945, 0.460571, 0.485485, 0.101369, 0.639633, -0.761943, 5.952, -0.630402, -45.9497 )
bone_name = "mixamorig_left_up_leg"

[node name="Area" type="Area" parent="Pivot/combined_kaol/kaol bones/Skeleton/l_leg_bone"]

[node name="CollisionShape" type="CollisionShape" parent="Pivot/combined_kaol/kaol bones/Skeleton/l_leg_bone/Area"]
transform = Transform( 1, -2.98023e-08, -5.96046e-08, 1.19209e-07, 1, -1.04308e-07, -2.98023e-08, -1.49012e-08, 1, -1.04904e-05, 10.1595, 3.8147e-06 )
shape = SubResource( 4 )

[node name="r_leg_bone" type="BoneAttachment" parent="Pivot/combined_kaol/kaol bones/Skeleton" index="6"]
transform = Transform( -0.761598, -0.555972, -0.333037, -0.500682, 0.178396, 0.847062, -0.411548, 0.811831, -0.414213, -4.66254, -0.799351, -45.9729 )
bone_name = "mixamorig_right_up_leg"

[node name="Area" type="Area" parent="Pivot/combined_kaol/kaol bones/Skeleton/r_leg_bone"]

[node name="CollisionShape" type="CollisionShape" parent="Pivot/combined_kaol/kaol bones/Skeleton/r_leg_bone/Area"]
transform = Transform( 1, -2.98023e-08, -5.96046e-08, 1.19209e-07, 1, -1.04308e-07, -2.98023e-08, -1.49012e-08, 1, -1.04904e-05, 10.1595, 3.8147e-06 )
shape = SubResource( 4 )

[node name="hips_bone" type="BoneAttachment" parent="Pivot/combined_kaol/kaol bones/Skeleton" index="7"]
transform = Transform( 0.999985, -0.000445103, -0.00541998, 0.00541999, 0.163144, 0.986587, 0.000445102, -0.986602, 0.163144, 0.643441, -0.26828, -48.4989 )
bone_name = "mixamorig_hips"

[node name="Area" type="Area" parent="Pivot/combined_kaol/kaol bones/Skeleton/hips_bone"]

[node name="CollisionShape" type="CollisionShape" parent="Pivot/combined_kaol/kaol bones/Skeleton/hips_bone/Area"]
transform = Transform( 0.999999, 0, 0, 2.91038e-10, 1, 7.45058e-08, -3.25963e-09, 0, 1, -5.96046e-08, -2.88266, 1.2705 )
shape = SubResource( 5 )

[node name="BoneAttachment" type="BoneAttachment" parent="Pivot/combined_kaol/kaol bones/Skeleton" index="8"]
transform = Transform( 0.8938, 0.343957, 0.287779, -0.44241, 0.571149, 0.691421, 0.0734546, -0.745308, 0.662662, -17.4232, 12.404, -68.3906 )
bone_name = "mixamorig_right_hand"

[node name="KaolSwords" parent="Pivot/combined_kaol/kaol bones/Skeleton/BoneAttachment" instance=ExtResource( 8 )]
transform = Transform( 3.82264, 18.4403, 6.73371, -19.5687, 4.12655, -0.191627, -1.56609, -6.5519, 18.8313, 2.43179, 4.1877, 0.304321 )

[node name="drslayer" parent="Pivot/combined_kaol/kaol bones/Skeleton/BoneAttachment/KaolSwords" index="0"]
visible = false
material/0 = ExtResource( 4 )

[node name="hslayer" parent="Pivot/combined_kaol/kaol bones/Skeleton/BoneAttachment/KaolSwords" index="1"]
material/0 = ExtResource( 4 )

[node name="HR sword" parent="Pivot/combined_kaol/kaol bones/Skeleton/BoneAttachment/KaolSwords" index="2"]
transform = Transform( 1, 0, -4.47035e-08, -2.98023e-08, 1, -2.98023e-08, 1.49012e-08, -2.98023e-08, 1, 0, 0, 0 )
visible = false
material/0 = ExtResource( 4 )

[node name="Position3D" type="Position3D" parent="Pivot/combined_kaol/kaol bones/Skeleton/BoneAttachment/KaolSwords"]
transform = Transform( 0.0488812, -0.000137752, -0.0105174, -0.000192691, 0.0499756, -0.00155005, 0.0105167, 0.00155594, 0.0488568, -0.00869298, -0.783674, -0.041889 )

[node name="DS_HitBox" type="Area" parent="Pivot/combined_kaol/kaol bones/Skeleton/BoneAttachment/KaolSwords/Position3D"]
transform = Transform( 23, -1.90735e-06, -1.90735e-06, 2.86102e-06, 23, -2.86102e-06, -2.86102e-06, -4.76837e-06, 23, 4.57764e-05, 18.1026, 2.28882e-05 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Pivot/combined_kaol/kaol bones/Skeleton/BoneAttachment/KaolSwords/Position3D/DS_HitBox"]
transform = Transform( 1, 2.98023e-08, -1.49012e-08, 0, 0.864016, 5.96046e-08, 4.47035e-08, -5.96046e-08, 1, 7.15256e-07, 0.946206, 3.57628e-07 )
shape = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.5, 0 )
visible = false
shape = SubResource( 7 )

[node name="SpringArm" type="SpringArm" parent="."]
transform = Transform( 1, 0, 0, 0, 0.951057, 0.309017, 0, -0.309017, 0.951057, 0, 2.4, 0 )
spring_length = 4.0
margin = 0.2

[node name="Camera" type="Camera" parent="SpringArm"]
transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0.4, 3.5 )
fov = 82.0
far = 256.0

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 39 )
anim_player = NodePath("../Pivot/combined_kaol/AnimationPlayer")
active = true
parameters/Add2/add_amount = 1.0
parameters/InteractStates/current = 0
parameters/OneShotAll/active = false
parameters/OneShotInteract/active = false
parameters/States/current = 3
parameters/TimeScale/scale = 1.4
"parameters/TimeScale 2/scale" = 1.61
parameters/Transition/current = 1
parameters/idle2walk/blend_position = 0.0
parameters/idleStates/current = 0

[node name="Timers" type="Spatial" parent="."]

[node name="RollTimer" type="Timer" parent="Timers"]
wait_time = 0.8
one_shot = true

[node name="AttackTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="ComboTimer" type="Timer" parent="Timers/AttackTimer"]
one_shot = true

[node name="HealTimer" type="Timer" parent="Timers"]
wait_time = 1.75
one_shot = true

[node name="FireTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="HealthManager" parent="." instance=ExtResource( 5 )]

[node name="EnergyManager" parent="." instance=ExtResource( 7 )]

[node name="UserInterface" parent="." instance=ExtResource( 6 )]

[node name="InventoryControl" parent="." instance=ExtResource( 11 )]
visible = false

[node name="AlertAreaHearing" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="AlertAreaHearing"]
shape = SubResource( 40 )

[node name="AlertAreaLos" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="AlertAreaLos"]
shape = SubResource( 41 )

[node name="BloodParticles" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.80251, 0 )

[node name="FireballSpawner" parent="." instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.348441, 1.87248, -0.940079 )

[connection signal="body_exited" from="Pivot/combined_kaol/kaol bones/Skeleton/BoneAttachment/KaolSwords/Position3D/DS_HitBox" to="." method="_on_DS_HitBox_body_exited"]
[connection signal="timeout" from="Timers/RollTimer" to="." method="_on_RollTimer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="Timers/AttackTimer/ComboTimer" to="." method="_on_ComboTimer_timeout"]
[connection signal="timeout" from="Timers/HealTimer" to="." method="_on_HealTimer_timeout"]
[connection signal="timeout" from="Timers/FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="body_entered" from="AlertAreaHearing" to="." method="AlertAreaHearing_body_entered"]
[connection signal="body_entered" from="AlertAreaLos" to="." method="AlertAreaLos_body_entered"]
[connection signal="body_exited" from="AlertAreaLos" to="." method="AlertAreaLos_body_exited"]

[editable path="Pivot/combined_kaol"]
[editable path="Pivot/combined_kaol/kaol bones/Skeleton/BoneAttachment/KaolSwords"]
